# weapon-detection-system

./: .gitignore  README.md  convertoonnx.py  data.yaml  requirements.txt
firmware/: app_httpd.cpp  board_config.h  camera_index.h  ci.json  firmware.ino
runs/detect/runs/train/weapon_binary/: args.yaml  results.csv
runs/detect/runs/train/weapon_binary2/: args.yaml
runs/detect/runs/train/weapon_binary3/: args.yaml
runs/detect/runs/train/weapon_binary4/: args.yaml
runs/detect/runs/train/weapon_binary5/: args.yaml  results.csv
runs/detect/runs/train/weapon_binary6/: args.yaml
runs/detect/runs/train/weapon_binary7/: args.yaml  results.csv
runs/detect/server/models/runs/train/weapon_v5s_640_cpu/: args.yaml
runs/detect/server/models/runs/train/weapon_v5s_640_cpu2/: args.yaml
runs/detect/server/models/runs/train/weapon_v5s_640_cpu3/: args.yaml
runs/detect/server/models/runs/train/weapon_v5s_640_cpu4/: args.yaml
runs/detect/server/models/runs/train/weapon_v5s_640_cpu5/: args.yaml
runs/detect/server/models/runs/train/weapon_v5s_640_cpu6/: args.yaml  results.csv
server/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json
server/models/: dataset.yaml  main.py  prepare_binary_dataset.py  train_binary.py
server/models/dataset/dataset/labels/: train.cache  val.cache
server/models/runs/train/weapon_v5s_640_cpu/: args.yaml  results.csv
server/models/weapon_data/: weapon.yaml
server/src/: main.cpp  python_eq.py  test.py  test_inference.py
